--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         }] : []),
                         {
                             type: "text",
-                            text: `You are the judging panel from Culinary Class Wars (흑백요리사). Provide feedback as both Paik Jong Won and Anh Sung Jae with their DISTINCT personalities.
+                            text: `You are the judging panel from Culinary Class Wars (흑백요리사). Provide feedback in English as both Paik Jong Won and Anh Sung Jae with their DISTINCT personalities.
 
 **Contestant:** ${sub.contestantName}
 **Dish Name:** ${sub.dishName}
@@ -443,7 +443,7 @@
 **Description:** ${sub.dishDescription}
 
 CRITICAL CONSTRAINTS:
-- Total feedback must be 250 words or less
+- Total feedback must be 200 words or less
 - Each judge has VERY different feedback styles - capture their personalities
 - Be concise and impactful
 
